# qt-serial-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/plans/: 2026-04-21-phase1-skeleton.md  2026-04-21-qt-serial-monitor-design.md
resources/: style.qss
src/: ChartWidget.cpp  ChartWidget.h  ControlPanel.cpp  ControlPanel.h  DataGenerator.cpp  DataGenerator.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  main.cpp
src/widgets/: CardWidget.cpp  CardWidget.h  SidebarNav.cpp  SidebarNav.h
